----------------------
* Now exposing Project status (read-only) in the jmx interface

log4j.properties
----------------------
* Added more information into the console log including the timestamp - Patch by Mark Richters
* Added a rotating file log - Patch by Mark Richters

Project
----------------------
* Fixed a bug causing NPE when using a serialized project file from releases prior to 2.1

ProjectXMLHelper
----------------------
* Fixed a bug where if the log element existed dir was a required attribute

Schedule
----------------------
* Set maximum value for interval to one year

StarTeam
----------------------
* Fixed a bug where an NPE was thrown when a user account no longer existed - Patch by kathyh@syntricity.com

StarTeamBootstrapper
----------------------
* StarTeamBootstrapper submitted by Lee Marlow

testdetails.xsl
----------------------
* Added testdetails.xsl to generate content for the Test Details tab - Patch by Antoine Bonavita

CruiseControl Release Notes - 2.1.1

main/build.xml
----------------------
* update version to 2.1

reporting/jsp/build.xml
----------------------
* Filter token for build artifacts was missing  - Fixed by Jason Yip

cruisecontrol-jsp12.tld
----------------------
* Fixed closing tag-class, tei-class and body-content tags for ArtifactsLinkTag. - Found by Dan Rollo

Project
----------------------
* Fixed bug where a paused build would never resume.

unittests.xsl
----------------------
* Added classname for the failing unit test - Patch by Prakash Tirumalareddy

CruiseControl Release Notes - 2.1

ArtifactsPublisher
----------------------
* New functionality to allow for creation of a "build artifacts" directory. This directory can have artifacts published to it - things like jars that were built, documents that were published, etc. Then, these artifacts can be linked to from the CC webapp. - Submitted by Mike Rettig

AntBuilder
---------------------
* Added antWorkingDir attribute. - Patch by Brett Wooldridge